fixed navbar z-index, prevent drag and dro p button showing in navbar

--- a/less/moodle/modules.less
+++ b/less/moodle/modules.less
@@ -89,6 +89,11 @@ select {
   color: @navbarLinkColorHover;
 }
 
+.navbar-fixed-top,
+.navbar-fixed-bottom {
+        z-index: 4030;
+}
+
 .dir-rtl .breadcrumb-button,
 .dir-rtl .navbar .btn-navbar {
     float: left;
